--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 						<ul class="icons">
 							
 							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="#" class="icon fa-medium"><span class="label">Medium</span></a></li>
 							<li><a href="#" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 							<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
@@ -52,7 +53,7 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">April 25, 2017</span>
+									<span class="date"></span>
 									<h2><a href="#">A Little About Me</a></h2>
 									<p></p>
 								</header>
@@ -91,7 +92,7 @@
 
 								<article>
 									<header>
-										<span class="date">April 18, 2017</span>
+										<span class="date"></span>
 										<h2><a href="#">Ante mattis<br />
 										interdum dolor</a></h2>
 									</header>
@@ -104,7 +105,7 @@
 
 								<article>
 									<header>
-										<span class="date">April 14, 2017</span>
+										<span class="date"></span>
 										<h2><a href="#">Tempus sed<br />
 										nulla imperdiet</a></h2>
 									</header>
