--- a/elements.html
+++ b/elements.html
@@ -32,6 +32,7 @@
 						<ul class="icons">
 							
 							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="#" class="icon fa-medium"><span class="label">Medium</span></a></li>
 							<li><a href="#" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 							<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
@@ -120,6 +121,7 @@
 								<ul class="icons alt">
 									
 									<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
+									<li><a href="#" class="icon fa-medium"><span class="label">Medium</span></a></li>
 									<li><a href="#" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 									<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
